copyright language and fixed social alignment for mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -824,6 +824,34 @@ $gradient: #00b5f5;
   }
 }
 
+.copy-right {
+  font-size: 14px;
+  text-align: center;
+
+  font-style: italic;
+  &__jimmy {
+    display: block;
+  }
+
+  &__tony {
+    &:link,
+    &:visited {
+      text-decoration: none;
+      transition: all 0.2s;
+      font-size: 14px;
+      padding: 4px;
+      border-radius: 10px;
+    }
+
+    &:hover {
+      background-color: white;
+      color: darkgray;
+      box-shadow: 0 1rem 2rem rgba(black, 0.15);
+      transform: scale(1.3);
+    }
+  }
+}
+
 // end of footer
 
 // beginning Company component
@@ -1940,24 +1968,11 @@ a:hover {
     line-height: 1.5;
     font-size: 16px;
     letter-spacing: 0px;
-    padding-left: 15% !important;
-  }
-
-  .social-container {
-    width: 100%;
-    text-align: left;
+    padding-left: 45px !important;
   }
 
   .socialFont {
-    padding-left: 15% !important;
-  }
-
-  .social-icons {
-    padding-right: 4em;
-    padding-left: 1em;
-    list-style: none;
-    margin: 0em;
-    text-align: center;
+    padding-left: 45px !important;
   }
 
   //login page for mobile view
@@ -2125,6 +2140,15 @@ a:hover {
   .about-position {
     text-align: center;
     width: 100%;
+  }
+
+  .social-container {
+    width: 200px;
+    text-align: left;
+  }
+
+  .social-icons {
+    margin: 0;
   }
 }
 
